--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,7 @@
     "jest": true
   },
   "rules": {
+    "react/prop-types": 0,
     "react-hooks/rules-of-hooks": "error",
     "no-debugger": 0,
     "no-alert": 0,
@@ -61,6 +62,7 @@
     "react/forbid-prop-types": 0,
     "react/jsx-props-no-spreading": 0,
     "react/no-unescaped-entities": 0,
+    "jsx-a11y/media-has-caption": 0,
     "jsx-a11y/accessible-emoji": 0,
     "react/require-default-props": 0,
     "react/jsx-filename-extension": [
@@ -70,7 +72,13 @@
       }
     ],
     "radix": 0,
-    "no-shadow": "off",
+    "no-shadow": [
+      2,
+      {
+        "hoist": "all",
+        "allow": ["resolve", "reject", "done", "next", "err", "error"]
+      }
+    ],
     "quotes": [
       2,
       "single",
@@ -84,7 +92,7 @@
       {
         "trailingComma": "es5",
         "singleQuote": true,
-        "printWidth": 120,
+        "printWidth": 80,
         "endOfLine": "auto"
       }
     ],
