--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "eslint": "^7.10.0",
     "firebase": "^7.21.1",
     "fuse.js": "^6.4.1",
     "normalize.css": "^8.0.1",
